# mcc

./: Cargo.toml  README.md  build.rs
completions/: _myprog  myprog.bash  myprog.fish
src/: cli.rs  main.rs
